apps/home-automation/nodered/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nodered.support4u.se
    secretName: nodered-tls
  rules:
  - host: nodered.support4u.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodered
            port:
              number: 80
